# self-reflective-agent-system

./: .env.example  .gitignore  README.md  config.py  llm_factory.py  main.py  pyproject.toml  requirements.txt  setup.py  state.py  test_cases.py
agents/: __init__.py  evaluator.py  memory_agent.py  planner.py  reflector.py  retriever.py  router.py  synthesizer.py  tool_executor.py
api/: __init__.py  app.py
docs/: documentation.md
graph/: __init__.py  workflow.py
memory/: __init__.py  conversation_memory.py
rag/: __init__.py  embeddings.py  knowledge_base.py  vector_store.py
tools/: __init__.py  calculator.py  python_executor.py  web_search.py
ui/: app.py
