[project]
name = "area"
version = "1.0.0"
description = "Autonomous Research & Execution Agent – a LangGraph multi-agent AI system"
requires-python = ">=3.10"

dependencies = [
    # ── Core LangChain / LangGraph ──────────────────────────────────────────
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",

    # ── LLM Providers ────────────────────────────────────────────────────────
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",

    # ── Embeddings ───────────────────────────────────────────────────────────
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",

    # ── Vector Store ─────────────────────────────────────────────────────────
    "faiss-cpu>=1.8.0",

    # ── API Backend ──────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",

    # ── Frontend ─────────────────────────────────────────────────────────────
    "streamlit>=1.38.0",

    # ── Utilities ────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.9.0",
    "duckduckgo-search>=6.0.0",
]

[project.scripts]
area = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
